# leap

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: cla.yaml  pre-commit.yaml  stale.yaml
agentio/: LICENSE.md  __init__.py
leap/: __init__.py
leap/examples/: helloworld.py
puppetry/: README.md  __init__.py
puppetry/examples/: arm_wave.py  arms_and_pelvis.py  doubleleap.py  head_and_arms_move.py  head_nod.py  minimum_example.py  mouth_move.py  puppet_poser.py  puppet_poser_data.json
puppetry/examples/CppDemo/: CMakeLists.txt  CMakeSettings.json  README.md
puppetry/examples/CppDemo/CppDemo/: CMakeLists.txt  CppDemo.cpp  CppDemo.h  puppetry.cpp  puppetry.h
puppetry/kinectv2/: README.md  ReadMe_PyKinect2_diffs.txt  kincectv2_puppetry.py  pygame_button.py
puppetry/util/: playback.py
puppetry/webcam/: camera.py  display.py  head_webcam.py  pconsts.py  plot.py  putils.py  webcam_puppetry.py  webcam_test.py
python/: README.md  leap.py
python/helloworld/: README.md  helloworld.py
python/puppetry/: README.md  arm_wave.py  display.py  head_and_arms_move.py  head_nod.py  head_webcam.py  minimum.py  mouth_move.py  pconsts.py  playback.py  plot.py  puppetry.py  putils.py  webcam_pose.py  webcam_puppetry.py
python/puppetry/examples/: arm_wave.py  head_and_arms_move.py  head_nod.py  minimum_example.py  mouth_move.py
python/puppetry/util/: playback.py
python/puppetry/webcam/: camera.py  display.py  head_webcam.py  pconsts.py  plot.py  putils.py  webcam_pose.py  webcam_puppetry.py  webcam_test.py
