[project]
name = "leap"
version = "0.1.0"
description = "Python implementation of Second Life viewer's \"LLSD Event API Plugin\" protocol"
authors = [
    {name = "Linden Lab",email = "slcorps@lindenlab.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "eventlet",
    "llsd",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
