[metadata]
name = leap
version = 0.1.0
license = MIT

[options]
packages =
    leap
##    puppetry
install_requires =
    eventlet
    importlib-metadata; python_version < "3.8"
    llsd

##[options.entry_points]
##console_scripts =
##    puppetry-webcam-test = puppetry.webcam.webcam_test:main
##    puppetry-webcam = puppetry.webcam.webcam_puppetry:main

[options.extras_require]
puppetry =
    PyGLM
opencv =
    dlib
    mediapipe
    numpy
    opencv-python
    pygrabber
    face-recognition
